--- a/MealPreppers/MealPreppers/Content/CustomCss/Index/GridView/GridCss.css
+++ b/MealPreppers/MealPreppers/Content/CustomCss/Index/GridView/GridCss.css
@@ -1,14 +1,13 @@
 ﻿
 #grid-layout {
-    background-color: lightcyan;
+    background-color: #F7F8FA;
     display: grid;
     grid-template-columns: repeat(auto-fill, 250px);
     width: 100%;
-    height: 100%;
-    
+    height: 850px;
     padding-top: 10px;
     padding-bottom: 10px;
-    border: 5px solid black;
+    /*    border: 5px solid black;*/
     overflow-y: auto;
     align-content: start;
     justify-content: center;
@@ -18,57 +17,76 @@
     display: flex;
     background-color: white;
     border-radius: 5px;
-    border: 2px solid #efefef;
-    height: 250px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    height: 300px;
     width: 90%;
     margin: auto;
     margin-bottom: 5px;
-    
     text-align: center;
     min-width: 150px;
-    
-    max-height: 250px;
-    overflow-y: auto;
-    
+    position: relative;
+    margin-bottom: 20px;
+
+
+  border-radius: 15px;
+  background-color: white;
+  
+
 }
 
-.item-picture {
+.item-picture { /*Not used currently*/
     margin-top: 10px;
     width: 50%;
 }
 
-.card-img-top{
+.card-img-top {
     width: 100%;
     object-fit: cover;
-    height: 100px;
+    height: 150px;
+    border-radius: 15px 15px 0px 0px;
 }
 
 .card-text{
     margin-top: 0px;
-    height: 20%;
-   
+  
 }
 
-.grid-image-container{
-    
+.grid-image-container {
     width: 100%;
-    height: 100px;
+    height: 150px;
+    border-radius: 25px;
 }
 
-.card-title{
-    margin-top: 3px;
-    margin-bottom: 3px;
-    height: 25%;
-    
+.card-title {
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .recipeDescContainer {
-    height: 50%;
-    overflow-y: auto;
+    margin-top: 10px;
+    
+    height: auto;
+    overflow-y: hidden;
+    font-size: 12px;
+    
+    
     
 }
 
-.grid-button{
+.grid-button {
     
-    object-fit: cover;
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+    padding-top: 10px;
+    
+}
+}
+
+.grid-card-title{
+    
 }
