--- a/MealPreppers/MealPreppers/Content/CustomCss/MyProfile/MiddleView/MyProfileMiddleCSS.css
+++ b/MealPreppers/MealPreppers/Content/CustomCss/MyProfile/MiddleView/MyProfileMiddleCSS.css
@@ -33,7 +33,7 @@
 
 #grid-layout{
     height: 500px;
-    justify-content: normal;
+    
 }
 
 #userBio {
